--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Creator's Landing Page | Hugo Theme # Website name
-baseURL: 'https://neshil.dayan.homes/' # Website URL
+baseURL: 'https://meshil.dayan.homes/' # Website URL
 
 ############################
 ## PAGE OPTIONS
