--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://192.168.0.222:1313/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+languageCode = 'he'
+title = 'משטסטיק ישראל'
 theme = 'ananke'
